# tide

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SLACK-SANDBOX.md  commitlint.config.js  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  commitlint.yml  release-please.yml
helm/: Chart.yaml  Makefile  README.md  values-example.yaml  values.yaml
helm/manifests/: redis.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  externalsecret.yaml  service.yaml  servicemonitor.yaml
src/tide/: __init__.py  __main__.py  cli.py  config.py  main.py
src/tide/blockchain/: __init__.py  client.py  networks.py
src/tide/core/: __init__.py  cdp.py  cdp_controller.py  wallet.py
src/tide/faucet/: __init__.py  distributor.py  rate_limiter.py  service.py
src/tide/observability/: __init__.py  health.py  logging.py  metrics.py
src/tide/slack/: __init__.py  adapter.py  commands.py  formatter.py
tests/: __init__.py  conftest.py  constants.py  test_cdp.py  test_cdp_controller.py  test_cli.py  test_client.py  test_config.py  test_distributor.py  test_faucet_service.py  test_health.py  test_logging.py  test_main.py  test_metrics.py  test_networks.py  test_rate_limiter.py  test_slack_adapter.py  test_slack_commands.py  test_slack_formatter.py  test_wallet.py
